--- a/GymApp/GymApp.DAL/GymApp.DAL.csproj
+++ b/GymApp/GymApp.DAL/GymApp.DAL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
