--- a/GymApp/GymAppApi/appsettings.json
+++ b/GymApp/GymAppApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GymDbDefault": "Server=(localdb)\\mssqllocaldb;Database=GymDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
