--- a/GymApp/GYM.DAL/GYM.DAL.csproj
+++ b/GymApp/GYM.DAL/GYM.DAL.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
   </ItemGroup>
 
 </Project>
