--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,14 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+           cd ./GYM 
+           dotnet restore
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: |
+           cd ./GYM 
+           dotnet build --no-restore
+    #- name: Test
+    #  run: |
+    #      cd ./GYM
+    #      dotnet test --no-build --verbosity normal
