--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,9 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
-
+env:
+  SOLUTION_PATH : GymApp/
+  
 on:
   push:
     branches: [ "main" ]
@@ -21,14 +23,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: |
-           cd ./GymApp 
-           dotnet restore
+      run: ${{ env.SOLUTION_PATH }}dotnet restore
     - name: Build
-      run: |
-           cd ./GymApp 
-           dotnet build --no-restore
+      run: ${{ env.SOLUTION_PATH }}dotnet build --no-restore
     - name: Test
-      run: |
-           cd ./GymApp
-           dotnet test --no-build --verbosity normal
+      run: ${{ env.SOLUTION_PATH }}dotnet test --no-build --verbosity normal
