--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,7 +3,8 @@
 
 name: .NET
 env:
-  SOLUTION_PATH : GymApp/
+  SOLUTION_PATH       : GymApp/
+  IDENTITY_SERVER_PATH: IdentytiServer/
   
 on:
   push:
@@ -24,7 +25,12 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore ${{ env.SOLUTION_PATH }}
+    - name: Restore dependencies
+      run: dotnet restore ${{ env.IDENTITY_SERVER_PATH }}
+  
     - name: Build
       run: dotnet build --no-restore ${{ env.SOLUTION_PATH }} 
     - name: Test
       run:  dotnet test --no-build --verbosity normal ${{ env.SOLUTION_PATH }} 
+    - name: Build
+      run: dotnet build --no-restore ${{ env.IDENTITY_SERVER_PATH }} 
