--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,14 +23,14 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
+    - name: Restore GymApp dependencies
       run: dotnet restore ${{ env.SOLUTION_PATH }}
-    - name: Restore dependencies
+    - name: Restore Identity Server dependencies
       run: dotnet restore ${{ env.IDENTITY_SERVER_PATH }}
   
-    - name: Build
+    - name: Build GymApp
       run: dotnet build --no-restore ${{ env.SOLUTION_PATH }} 
     - name: Test
       run:  dotnet test --no-build --verbosity normal ${{ env.SOLUTION_PATH }} 
-    - name: Build
+    - name: Build Identity Server
       run: dotnet build --no-restore ${{ env.IDENTITY_SERVER_PATH }} 
