--- a/GYM.BlazorApp/GYM.BlazorApp.csproj
+++ b/GYM.BlazorApp/GYM.BlazorApp.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.15" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.15" />
+  </ItemGroup>
+
 </Project>
