Add CI/DI to blazor app

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,9 @@
 
 name: .NET
 env:
-  SOLUTION_PATH       : GymApp/
-  IDENTITY_SERVER_PATH: IdentityServer/
+  SOLUTION_PATH          : GymApp/
+  IDENTITY_SERVER_PATH   : IdentityServer/
+  GYM_BLAZOR_CLIENT_PATH : GYM.BlazorApp/
   
 on:
   push:
@@ -34,3 +35,5 @@ jobs:
       run:  dotnet test --no-build --verbosity normal ${{ env.SOLUTION_PATH }} 
     - name: Build Identity Server
       run: dotnet build --no-restore ${{ env.IDENTITY_SERVER_PATH }} 
+    - name: Build GYM.BlazorApp
+      run: dotnet build --no-restore ${{ env.GYM_BLAZOR_CLIENT_PATH }} 
