--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,8 @@ jobs:
       run: dotnet restore ${{ env.SOLUTION_PATH }}
     - name: Restore Identity Server dependencies
       run: dotnet restore ${{ env.IDENTITY_SERVER_PATH }}
+    - name: Restore GYM.BlazorApp restore
+      run: dotnet restore ${{ env.IDENTITY_SERVER_PATH }}
   
     - name: Build GymApp
       run: dotnet build --no-restore ${{ env.SOLUTION_PATH }} 
