--- a/GymApp/GYM.GrpcService/Properties/launchSettings.json
+++ b/GymApp/GYM.GrpcService/Properties/launchSettings.json
@@ -1,10 +1,19 @@
 ﻿{
   "profiles": {
-    "GYM.GrpcService": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5263;https://localhost:7253",
+      "applicationUrl": "http://localhost:5064",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7161;http://localhost:5064",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
