--- a/GymApp/GYM.GrpcService/appsettings.json
+++ b/GymApp/GYM.GrpcService/appsettings.json
@@ -10,5 +10,9 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ConnectionStrings": {
+    "GymDbDefault": "Server=(localdb)\\mssqllocaldb;Database=GymDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
+
