--- a/GymApp/GYM.GrpcService/GYM.GrpcService.csproj
+++ b/GymApp/GYM.GrpcService/GYM.GrpcService.csproj
@@ -9,11 +9,13 @@
 
 	<ItemGroup>
 	  <None Remove="Protos\couches.proto" />
+	  <None Remove="Protos\visitors.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Protobuf Include="Protos\couches.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\visitors.proto" GrpcServices="Server" />
 	</ItemGroup>
 
 	<ItemGroup>
