NMD-354 Add visitor Service (gRPC) (#44)

--- a/GymApp/GYM.GrpcService/GYM.GrpcService.csproj
+++ b/GymApp/GYM.GrpcService/GYM.GrpcService.csproj
@@ -9,12 +9,14 @@
 
 	<ItemGroup>
 	  <None Remove="Protos\couches.proto" />
+	  <None Remove="Protos\visitors.proto" />
 	  <None Remove="Protos\orders.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Protobuf Include="Protos\couches.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\visitors.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\orders.proto" GrpcServices="Server" />
 	</ItemGroup>
 
