NMD-367 Add localhost to appsettings

--- a/GymApp/GymAppApi/appsettings.json
+++ b/GymApp/GymAppApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GymDbDefault": "Server=(localdb)\\mssqllocaldb;Database=GymDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "GymDbDefault": "Server=(localdb)\\mssqllocaldb;Database=GymDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityServerLocalHost": "https://localhost:7181"
   }
 }
